Replacing ArrayList with faster structure